ZGC: runtime/InternalApi/ThreadCpuTimesDeadlock.java#id1 failed with "OutOfMemoryError: Java heap space"

XMLWordPrintable

    • gc
    • b23
    • x86_64
    • Verified

        The following test failed in the JDK17 CI:

        runtime/InternalApi/ThreadCpuTimesDeadlock.java#id1

        Here's a snippet from the log file:

        #section:main
        ----------messages:(5/379)----------
        command: main -XX:-UseTLAB -XX:+UsePerfData -Xmx128m ThreadCpuTimesDeadlock
        reason: User specified action: run main/othervm -XX:-UseTLAB -XX:+UsePerfData -Xmx128m ThreadCpuTimesDeadlock
        Mode: othervm [/othervm specified]
        Additional options from @modules: --add-modules java.management --add-exports java.management/sun.management=ALL-UNNAMED
        elapsed time (seconds): 12.115
        ----------configuration:(4/121)----------
        Boot Layer
          add modules: java.management
          add exports: java.management/sun.management ALL-UNNAMED

        ----------System.out:(7/189)----------
        Successful iterations: 10000
        Successful iterations: 20000
        Successful iterations: 30000
        Successful iterations: 40000
        Successful iterations: 50000
        Successful iterations: 60000
        PASSED.
        ----------System.err:(4/210)----------
        STATUS:Passed.
        java.lang.OutOfMemoryError: Java heap space
        at ThreadCpuTimesDeadlock$1.run(ThreadCpuTimesDeadlock.java:75)
        STATUS:Failed.`main' threw exception: java.lang.OutOfMemoryError: Java heap space
        ----------rerun:(46/5467)*----------

              Assignee:
              Per Liden (Inactive)
              Reporter:
              Daniel Daugherty
              Votes:
              0 Vote for this issue
              Watchers:
              12 Start watching this issue

                Created:
                Updated:
                Resolved: